# CMakeRefresh_Submodules

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
configured/: CMakeLists.txt  config.hpp.in
libs/include/: my_lib.hpp
libs/src/: CMakeLists.txt  my_lib.cpp
